[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Turing-Test-Simulator"
version = "0.1.0"
description = "AI service which simulates the Turing test"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ibrahim Masa'deh", email = "ibrahim.masasdeh.prog@gmail.com" }
]

dependencies = [
    "streamlit==1.56.0",
    "langchain==1.2.15",
    "langchain-community==0.4.1",
    "langchain-google-genai==4.2.1",
    "pydantic-settings==2.13.1",
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "langchain-ollama==1.1.0",
]

[tool.setuptools.packages]
find = { include = ["src*"] }

[tool.uvicorn]
app = ""
host = ""
port = 8000
reload = true
